k8s/silly-bot/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: silly-bot
  namespace: default
spec:
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: silly-bot
  template:
    metadata:
      labels:
        app: silly-bot
    spec:
      serviceAccountName: silly-bot
      automountServiceAccountToken: true
      enableServiceLinks: true
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: silly-bot
          image: ghcr.io/brunostjohn/refund-bot:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1"
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
