k8s/silly-bot/ig-cors-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ig-cors
  namespace: default
spec:
  selector:
    matchLabels:
      app: ig-cors
  template:
    metadata:
      labels:
        app: ig-cors
    spec:
      containers:
        - name: ig-cors
          image: ghcr.io/brunostjohn/instafix/warp-cors:main
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3030
              protocol: TCP
              name: http
          readinessProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
