k8s/silly-bot/ig-cors-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ig-cors
  namespace: default
spec:
  selector:
    app: ig-cors
  ports:
    - port: 3030
      targetPort: 3030
      protocol: TCP
      name: http
