k8s/silly-bot/ig-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bot-ig
  namespace: default
spec:
  selector:
    app: bot-ig
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
