k8s/silly-bot/service.yml
apiVersion: v1
kind: Service
metadata:
  name: silly-bot
  namespace: default
  labels:
    app: silly-bot
spec:
  selector:
    app: silly-bot
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
