k8s/silly-bot/ig-cors-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ig-cors
  namespace: default
  labels:
    name: ig-cors
spec:
  rules:
    - host: igcorsproxy.mattmaxx.ing
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ig-cors
                port:
                  number: 3030
